fixup! Add heatmap visualization to Tachyon sampling profiler

--- a/Lib/profiling/sampling/heatmap_index_template.html
+++ b/Lib/profiling/sampling/heatmap_index_template.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="stat-card">
                     <span class="stat-value"><!-- TOTAL_SAMPLES --></span>
-                    <span class="stat-label">Total Samples</span>
+                    <span class="stat-label">Total Snapshots</span>
                 </div>
                 <div class="stat-card">
                     <span class="stat-value"><!-- DURATION --></span>
@@ -58,9 +58,8 @@
                             <th onclick="sortTable(0)">File ⇅</th>
                             <th onclick="sortTable(1)">Module ⇅</th>
                             <th onclick="sortTable(2)">Type ⇅</th>
-                            <th onclick="sortTable(3)" style="text-align: right;">Samples ⇅</th>
+                            <th onclick="sortTable(3)" style="text-align: right;">Line Samples ⇅</th>
                             <th onclick="sortTable(4)" style="text-align: right;">Lines Hit ⇅</th>
-                            <th onclick="sortTable(5)" style="text-align: right;">% of Total ⇅</th>
                             <th style="text-align: left;">Intensity</th>
                         </tr>
                     </thead>
